--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.weblaf-complete-1.29.jar=C:\\Users\\mina2\\Downloads\\weblaf-complete-1.28.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\joe-e\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\mina2\\AppData\\Roaming\\NetBeans\\9.0\\build.properties
